[metadata]
name = pykle_serial
version = attr: pykle_serial.__version__
author = Hajime Nakazato
author-email = hajime@kaoriha.org
home-page = https://github.com/hajimen/pykle_serial
description = A Python library for parsing the serialized format used on keyboard-layout-editor.com (KLE).
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords =
    keyboard-layout-editor.com
    KLE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/hajimen/pykle_serial/issues
    Changelog = https://github.com/hajimen/pykle_serial/blob/master/CHANGELOG.md

[options]
python_requires = >= 3.7
packages = pykle_serial
test_suite = tests
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    json5 >= 0.9.5
# tests_require =
#     {tests_require}
